# resume-analyser

./: .env.sample  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.sh  worker.sh
.devcontainer/: devcontainer.json
app/: server.py
app/db/: db.py
app/db/collections/: files.py
app/queue/: q.py  workers.py
app/static/: index.html  script.js  styles.css
app/utils/: email.py  file.py
